# devflow

airflow/docs/: 02_airflow_dag_authoring_advanced.md
dags/: s3client-dag.py
doc/: 01_airflow_dag_authoring_the_basis.md  02_airflow_dag_authoring_advanced.md
dvc/: params.yaml  pyproject.toml
dvc/notebooks/: step-4-build-ml-pipeline.ipynb
dvc/src/stages/: data_load.py
